# mochiko-game

./: README.md
game/: TODO.txt
game/assets/: .~lock.LevelOne - Copy.csv#  .~lock.LevelOne.ce#  .~lock.LevelOne.csv#  LevelOne - Copy.csv  LevelOne.ce  LevelOne.csv  LevelTwo.ce  LevelTwo.old.ce  desktop.ini  karen.pdn  shrub.pdn  start_screen.ce  world_2.mp3.reapeaks
game/shader/: crt.glsl
game/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  collision.cpp  collision.hpp  compile.ps1  compile.sh  consumerbuild.ps1  game.data  game.js  game.wasm  globals.cpp  globals.hpp  karen.cpp  karen.hpp  main.cpp  scroll.cpp  scroll.hpp  shell.html  smallshell.html  tile editor.cpp
game/src/demo/: game.data  game.js  game.wasm  index.html
game/src/include/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  screen.cpp  screen.hpp
